Mudando diretório das imagens

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="models-container flex-aligned">
                     <h2>ErpV</h2>
                     <div class="project">
-                        <img src="img/projects/ErpV.png" alt="">
+                        <img src="img/ErpV.png" alt="">
                     </div>
                     <span class="about-project">SistemaCaixa é um site para gestão de pequenos comércios (Controle de estoque, vendas, etc...)</span>
                     <span class="about-project">Criado com PHP, Laravel, Jquery, Javascript e Mysql</span>
@@ -119,7 +119,7 @@
                 <div class="models-container flex-aligned">
                     <h2>AskForMe</h2>
                     <div class="project">
-                        <img src="img/projects/AskForMe.png" alt="">
+                        <img src="img/AskForMe.png" alt="">
                     </div>
                     <span class="about-project">AskForMe é um site onde as pessoas fazem e respondem perguntas.</span>
                     <span class="about-project">Criado com PHP, JQUERY, MYSQL</span>
