Mudando página de obrigado do formulário

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">
+                <input type="hidden" name="_next" value="https://othalles.github.io/portfolio/thanks.html">
                 <button type="submit" class="form-submit">Enviar</button>
            </form>
         </div>
