Mudando texto e diminuindo hover

--- a/thanks.html
+++ b/thanks.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <div class="container-thank">
-            <h1>Obrigado pelo seu contato, em breve retornarei o contato</h1>
+            <h1>Obrigado pelo seu contato, em breve retornarei</h1>
             <h1>:)</h1>
         </div>
 </body>
