Corrigindo erro no botão

--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
                     </div>
                     <span class="about-project">SistemaCaixa é um site para gestão de pequenos comércios (Controle de estoque, vendas, etc...)</span>
                     <span class="about-project">Criado com PHP, Laravel, Jquery, Javascript e Mysql</span>
-                    <div class="button-see-project">
-                        <a href="https://github.com/OThalles/erpV-Gestao-de-comercio"></a>
-                        Ver projeto
-                    </div>
+                    <a href="https://github.com/OThalles/erpV-Gestao-de-comercio">
+                        <div class="button-see-project">
+                            Ver projeto
+                        </div>
+                    </a>
                 </div>
 
                 <div class="models-container flex-aligned">
