--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Obrigado</title>
 </head>
 <body>
         <div class="container-thank">
